backend/src/judge/docker/userData/ca43753086b18bd9009d2d742a7c38cb/3c36ddd1eedf4f4bd4f2f1bf592e1ca7.out
/30d3b93eacd573624dbbcaea0412f597/CodeArea.java:15: error: illegal start of expression
	    static int x = 10;
	    ^
1 error
